-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.2
-
macOS 10.14
-
954b73445cfbfef01207d51d1b986c6dd796c6d0 (qt/qtbase/5.12)
[REG 5.11.2->5.12.0]: Passing the minimum possible float value as a string to QLocale::toFloat() will cause it return 0 instead of the float value.
For Gerrit Dashboard: QTBUG-74833 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
257589,5 | Refine underflow check in QLocaleData::convertDoubleToFloat() | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |